--- a/css/dash.css
+++ b/css/dash.css
@@ -1,6 +1,6 @@
 .card:hover{
     top: -3px;
-    background-color: rgb(211, 220, 255);
+    box-shadow: 4px 4px 2px rgb(255, 255, 255);
 }
 
  .row2 .dropdown.dropend .dropdown-toggle::after {
